--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -34,4 +34,4 @@ jobs:
         pip install .[test]
     - name: Test with pytest
       run: |
-        pytest
+        pytest --cov cabinets/ --cov-report term-missing --cov-fail-under 70
